feat: add seeds (unidade, graduacao, alerta, qrcode) fix: filters (efetivo, alerta, unidade)
